src/components/loader/loader.css
.modal-load {
    position: fixed;
    top: 0;
    left: 0;
    width: 100vw;
    height: 100%;
    background: #3636364D;
    backdrop-filter: blur(10px);
    z-index: 1000;
}
.loader {
    width: 68.75px;
    height: 68.75px;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%,-50%);
    animation: spinner 1s infinite linear;
}
@keyframes spinner {
   100% {
      transform: translate(-50%,-50%) rotate(1turn);
   }
}

@media screen and (max-width: 992px) {
    .loader {
      width: 44px;
      height: 44px;  
    }
}

@media screen and (max-width: 480px) {
    .loader {
      width: 22px;
      height: 22px;  
    }
}

